[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-data-recovery"
version = "0.1.0"
description = "Turn a Claude data export into a private offline viewer and Markdown archive."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MindLeap AI Labs" }]
keywords = ["claude", "anthropic", "data-export", "offline", "conversation-viewer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
claude-data-recovery = "claude_data_recovery.cli:main"

[project.urls]
Homepage = "https://github.com/MindLeap-AI-Labs/claude-data-recovery"
Issues = "https://github.com/MindLeap-AI-Labs/claude-data-recovery/issues"

[tool.setuptools.packages.find]
where = ["src"]
